Replace new Integer() with Integer.valueOf(); Convert ListByFamily to a static runner; Set Parser during instantiation of ListByRelation; Minor clean up in ListDescendents.